--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.9.0",
     "leaflet": "^1.9.4",
     "next": "15.3.2",
     "react": "^19.0.0",
